[package]
name = "bullet"
version = "0.2.0"
authors = ["Sebastian Köln <sebk@rynx.org>"]
build = "build.rs"
license = "MIT"
repository = "https://gitlab.com/sebk/bullet.git"
homepage = "https://gitlab.com/sebk/bullet"
categories = ["science"]
description = "Supersonic Math"

[dependencies]
memmap        = { version = "*", optional=true }
tuple         = { version = "0.4", features = ["impl_simd"] }
lalrpop-util  = "*"
regex         = "*"
itertools     = "*"
quote         = { version = "*", optional = true }
syn           = { version = "*", optional = true }
math_traits   = { version = "*" }
proc-macro2   = { version = "0.3.6", optional = true }
num-bigint    = "*"
num-traits    = "*"
num-rational  = "*"

[build-dependencies]
lalrpop = "*"

[features]
nvidia = []
jit = ["memmap"]
codegen = ["syn", "quote", "proc-macro2"]
default = ["jit"]

[dev-dependencies]
jack = "*"
hound = "*"
termion = "*"
hiirc = "*"
bullet_macros = { path="bullet_macros" }
