[package]
name = "bullet"
version = "0.2.0"
authors = ["Sebastian Köln <sebk@rynx.org>"]
build = "build.rs"
license = "MIT"
repository = "https://gitlab.com/sebk/bullet.git"
homepage = "https://gitlab.com/sebk/bullet"
categories = ["science"]
description = "Supersonic Math"

[dependencies]
memmap        = { version = "0.6.2", optional=true }
tuple         = { version = "0.4", git = "https://gitlab.com/sebk/tuple" }
lalrpop-util  = "0.15.2"
regex         = "0.2.11"
itertools     = "0.7.8"
quote         = { version = "0.5.2", optional = true }
syn           = { version = "0.14.2", optional = true }
math_traits   = { version = "0.2", git = "https://gitlab.com/sebk/math_traits" }
proc-macro2   = { version = "0.3.6", optional = true }
num-bigint    = "0.2.0"
num-traits    = "0.2.5"
num-rational  = "0.2.1"
packed_simd   = { version = "0.3", optional = true }

[build-dependencies]
lalrpop = "0.15.2"

[features]
nvidia = []
jit = ["memmap", "tuple/impl_simd", "packed_simd"]
codegen = ["syn", "quote", "proc-macro2"]
default = ["jit"]

[dev-dependencies]
hound = "3.4.0"
termion = "1.5.1"
bullet_macros = { path="bullet_macros" }
packed_simd = "0.3"
