[package]
name = "bullet"
version = "0.2.0"
authors = ["Sebastian Köln <sebk@rynx.org>"]
build = "build.rs"
license = "MIT"
repository = "https://gitlab.com/sebk/bullet.git"
homepage = "https://gitlab.com/sebk/bullet"
categories = ["science"]
description = "Supersonic Math"
edition = "2018"

[dependencies]
memmap        = { version = "0.6.2", optional=true }
tuple         = { git = "https://github.com/s3bk/tuple" }
lalrpop-util  = "0.15.2"
regex         = "0.2.11"
itertools     = "0.7.8"
quote         = { version = "0.5.2", optional = true }
syn           = { version = "0.14.2", optional = true }
math_traits   = { version = "0.2", git = "https://github.com/s3bk/math_traits" }
proc-macro2   = { version = "0.3.6", optional = true }
num-bigint    = "0.2.0"
num-traits    = "0.2.5"
num-rational  = "0.2.1"
packed_simd   = { version = "0.3", optional = true }
log           = "*"
env_logger    = "*"
parity-wasm   = { version = "0.40", optional = true }
cuda          = { path = "../cuda", optional = true }

[build-dependencies]
lalrpop = "0.15.2"

[features]
nvidia = ["cuda"]
simd = ["tuple/impl_simd", "packed_simd"]
codegen = ["syn", "quote", "proc-macro2"]
wasm = ["parity-wasm"]
jit = ["memmap", "simd"]
default = []

[dev-dependencies]
hound = "3.4.0"
termion = "1.5.1"
bullet_macros = { path="bullet_macros" }
packed_simd = "0.3"
