[package]
name = "bullet_core"
version = "0.1.0"
authors = ["Sebastian Köln <sebk@rynx.org>"]
build = "build.rs"
license = "MIT"
description = "Core of Bullet (see crate bullet)"

[dependencies]
tuple = { version = "0.3", features = ["impl_simd"] }
simd = "0.2.0"
lalrpop-util = "0.13.1"
regex = "0.2.2"
env_logger = "0.4.3"
itertools = "0.6.3"
quote = "0.3.15"
syn = "0.11.11"
math_traits = "0.1.1"

[build-dependencies]
lalrpop = "0.13.1"
